--- a/public/sass/utils/_mixins.scss
+++ b/public/sass/utils/_mixins.scss
@@ -84,10 +84,10 @@
 	box-shadow: 0rem 0.2rem 0.5rem lightgrey;
 	background-color: #fff;
 	display: flex;
-	// align-items: end;
 	justify-content: space-between;
 	padding: .7rem;
 	margin: 1rem;
+    overflow: hidden;
 }
 
 @mixin itemName{
@@ -106,6 +106,6 @@
 }
 
 @mixin animationCard{
-    //@keyframe name duration timing-function fill-mode
-    animation: fadein-bottom 1s cubic-bezier(0.40, 0.575, 0.565, 1) both;
+    //Je fais apparaitre les cartes de manière smooth
+    animation: fadein-bottom 1.5s ease-in-out both;
 }
