--- a/styles.css
+++ b/styles.css
@@ -229,6 +229,7 @@ object {
   .fonction .fonction-list {
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
   }
 }
@@ -417,6 +418,7 @@ footer a {
   padding-left: 1rem;
   position: relative;
   font-weight: normal;
+  margin-bottom: 0.5rem;
 }
 .menu-title::after {
   content: "";
@@ -478,7 +480,7 @@ footer a {
   display: flex;
   justify-content: space-between;
   padding: 0.7rem;
-  margin: 1rem;
+  margin: 0.5rem;
   overflow: hidden;
   animation: fadein-bottom 1.5s ease-in-out both;
   max-width: 100%;
