--- a/public/sass/styles.scss
+++ b/public/sass/styles.scss
@@ -21,7 +21,7 @@ object{
     padding: nth($padding, 1);
     box-shadow: 0 0 .5rem rgba(0,0,0,.25);
     position: relative;
-        #logo{
+        .logo{
             @include font-title;
             text-align: center;
             color: #000;
@@ -42,14 +42,14 @@ object{
 }
 
 .intro{
-    padding: nth($padding, 3);
+    padding: 2rem 2rem 5rem 2rem;;
     @include txt-center;
     background-color: $color-bg;
     h2{
         padding: 0 nth($padding, 3);
     }
     p{
-        margin: 1.5rem 0;
+        margin: 1.5rem 0 3rem 0;
         font-weight: 400;
     }
 }
@@ -57,7 +57,6 @@ object{
 .cta{
     @include flexCenterX;
     padding-top: 1.5rem;
-
 }
 
 .btn-cta{
@@ -156,6 +155,7 @@ object{
     margin: nth($margin, 2) 0;
     @include img-fit-radius;
     position: relative;
+    overflow: hidden;
         .restauImg{
             @include img-fit-container;
         }
@@ -184,8 +184,8 @@ footer{
     background-color: #353535;
     color: $color-light;
     @include flexColumn;
-    padding: nth($padding, 2) ;
-        #logo{
+    padding: nth($padding, 4) ;
+        .logo{
             font-family: 'Shrikhand', sans-serif;
             padding-bottom: 1rem;
             font-size: 1.3rem;
@@ -219,7 +219,7 @@ footer{
         position: absolute;
         left: 1rem;
     }
-    #logo{
+    .logo{
         @include font-title;
         color: #000;
     }
@@ -299,7 +299,15 @@ footer{
 
 .favIcon:hover .fav-empty{
     opacity: 0;
-    animation: fill 1s ease-in-out both;
+    -webkit-animation: fill 1s ease-in-out both;
+            animation: fill 1s ease-in-out both;
+}
+@-webkit-keyframes fill {
+    0%{opacity: 1;}
+    30%{opacity: .7;}
+    60%{opacity: .4;}
+    70%{opacity: .2;}
+    100%{opacity: 0;}
 }
 @keyframes fill {
     0%{opacity: 1;}
@@ -487,7 +495,8 @@ restaurants, le bg est plutôt gris*/
     opacity: 0.98;
     background-color: #fff;
     // Animation pour le démarrage de la page
-    animation: loading 1.5s ease-in-out forwards;
+    -webkit-animation: loading 1.5s ease-in-out forwards;
+            animation: loading 1.5s ease-in-out forwards;
 }
 .circle{
     // Je lui donne des mesures 
@@ -498,7 +507,8 @@ restaurants, le bg est plutôt gris*/
     border-radius: 50% 20%;
     // J'anime mes circle pour qu'ils grossissent
     transform: scale(0); //car la valeur par défaut de scale est de 1
-    animation: grow 1s linear infinite;
+    -webkit-animation: grow 1s linear infinite;
+            animation: grow 1s linear infinite;
 }
     // Je donne des couleurs à mes éléments circle
     .circle1{
@@ -507,18 +517,29 @@ restaurants, le bg est plutôt gris*/
     .circle2{
         background-color: $color-secondary;
         // je delay l'animation de celui-ci
-        animation-delay: .20s;
+        -webkit-animation-delay: .20s;
+                animation-delay: .20s;
     }
     .circle3{
         background-color: $color-tertiary;
         // je delay l'animation de celui-ci
-        animation-delay: .40s;
+        -webkit-animation-delay: .40s;
+                animation-delay: .40s;
     }
 
 // Je paramètre mes animations
+@-webkit-keyframes loading{
+    0%{visibility: visible;}
+    100%{visibility: hidden;}
+}
 @keyframes loading{
     0%{visibility: visible;}
     100%{visibility: hidden;}
+}
+@-webkit-keyframes grow{
+    0%{transform: scale(1);}
+    50%{transform: scale(1.5);}
+    100%{transform: scale(2);}
 }
 @keyframes grow{
     0%{transform: scale(1);}
