--- a/public/sass/utils/_mixins.scss
+++ b/public/sass/utils/_mixins.scss
@@ -33,6 +33,7 @@
 @mixin font-title{
     font-family: 'Shrikhand', sans-serif;
     font-weight: normal;
+    font-size: 1.8rem;
 }
 
 @mixin txt-center{
