--- a/public/sass/styles.scss
+++ b/public/sass/styles.scss
@@ -172,95 +172,6 @@ object{
         }
 }
 
-footer{
-    background-color: #353535;
-    color: $color-light;
-    @include flexColumn;
-    padding: nth($padding, 4) ;
-        .logo{
-            font-family: 'Shrikhand', sans-serif;
-            padding-bottom: 1rem;
-            font-size: 1.3rem;
-        }
-        a{
-            color: $color-light;
-        }
-}
-.iconFootContainer{
-    @include flexRow;
-    align-items: center;
-    .icon5{
-        margin-right: .5rem;
-    }
-    .icon7{
-        margin-right: .7rem;
-    }
-    
-}
-.txtFooter{
-    font-size: 1rem;
-    line-height: 1.8;
-}
-
-.restauHeader{
-    @include flexCenterX;
-    text-align: center;
-    padding: 0.5rem 0 .5rem 1rem;
-    position: relative;
-    i::before{
-        position: absolute;
-        left: 1rem;
-    }
-    .logo{
-        @include font-title;
-        color: #000;
-    }
-}
-
-.banner{
-    height: 300px;
-    overflow: hidden;
-    img{
-        @include img-fit;
-    }
-}
-
-.menuContainer{
-    background-color: $color-bg;
-    margin-top: -4rem;
-    border-radius: 3rem 3rem 0 0;
-    position: relative;
-    padding-bottom: 3rem;
-    .restauName{
-        @include flexCenterY;
-        @include spaceBet;
-        padding: nth($padding, 2);
-    }
-        h2{
-            @include font-title;
-        }
-}
-
-.menu-title{
-    padding-left: nth($padding, 2);
-    position: relative;
-    font-weight: normal;
-    margin-bottom: .5rem;
-    &::after{
-        content: "";
-        width: 3rem;
-        height: .25rem;
-        background-color: $color-tertiary;
-        position: absolute;
-        left: 1rem;
-        bottom: -.3rem;
-    }
-}
-
-.menu{
-    margin-top: 2.5rem;
-}
-
 // ANIMATION DU COEUR EN :hover
 .favIcon{
     height: 2rem;
@@ -324,29 +235,110 @@ restaurants, le bg est plutôt gris*/
     border: 1px solid transparent;
 }
 
-// ANIMATION APPARITION SMOOTH DES CARTES DANS LE MENU
+footer{
+    background-color: #353535;
+    color: $color-light;
+    @include flexColumn;
+    padding: nth($padding, 4) ;
+        .logo{
+            font-family: 'Shrikhand', sans-serif;
+            padding-bottom: 1rem;
+            font-size: 1.3rem;
+        }
+        a{
+            color: $color-light;
+        }
+}
+.iconFootContainer{
+    @include flexRow;
+    align-items: center;
+    .icon5{
+        margin-right: .5rem;
+    }
+    .icon7{
+        margin-right: .7rem;
+    }
+    
+}
+.txtFooter{
+    font-size: 1rem;
+    line-height: 1.8;
+}
+
+// PAGE INDIVIDUELLE RESTAURANT 
+
+// logo et flèche 
+.restauHeader{
+    @include flexCenterX;
+    text-align: center;
+    padding: 0.5rem 0 .5rem 1rem;
+    position: relative;
+    i::before{
+        position: absolute;
+        left: 1rem;
+    }
+    .logo{
+        @include font-title;
+        color: #000;
+    }
+}
+
+.banner{
+    height: 300px;
+    overflow: hidden;
+    img{
+        @include img-fit;
+    }
+}
+
+.menuContainer{
+    background-color: $color-bg;
+    margin-top: -4rem;
+    border-radius: 3rem 3rem 0 0;
+    position: relative;
+    padding-bottom: 3rem;
+    .restauName{
+        @include flexCenterY;
+        @include spaceBet;
+        padding: nth($padding, 2);
+    }
+        h2{
+            @include font-title;
+        }
+}
+
+// disposition du menu 
+.menus { // container de entrées plats desserts
+    display: grid;
+    grid-gap: 20px;
+    padding: 0 1rem;
+    .menu { // container entrées
+        display: grid;
+        grid-gap: 15px;
+        margin-top: 2.5rem;
+}
+}
+
+.menu-title h3 {
+        position: relative;
+        font-weight: normal;
+        text-transform: uppercase;
+        margin-bottom: .5rem;
+        &::after {
+            content: '';
+            width: 3rem;
+            height: .25rem;
+            background: $color-tertiary;
+            position: absolute;
+            left: 0;
+            bottom: -.3rem;
+    }
+}
 
 .item-card{
+    @include flexCenterY;
     @include itemCard;
     @include animationCard;
-    max-width: 100%;
-    &:hover{
-        cursor: pointer;
-        .item-select{
-            transform: translateX(-9%);
-        }
-        .item-appear{
-            overflow: visible;
-        }
-        .item-price{
-            transform: translateX(-80%);
-            transition: .5s ease-in-out;
-        }
-        .fa-check-circle{
-            -webkit-animation: check .5s ease-in-out backwards;
-                    animation: check .5s ease-in-out backwards;
-        }
-    }
 }
 @-webkit-keyframes fadein-bottom{
     0%{
@@ -369,34 +361,69 @@ restaurants, le bg est plutôt gris*/
     }
 }
 
+.item-card:hover .item-select{
+    transform: translateX(0%);
+    transition: 0.5s ease;
+    @include flexCenterXY;
+}
+
+.item-card:hover .item-price{
+    padding-right: 70px;
+}
+
+.item-card:hover {
+    .fa-check-circle{
+        -webkit-animation: check .5s ease forwards;
+                animation: check .5s ease forwards;
+    }
+}
+@-webkit-keyframes check{
+    0%{transform: rotate(0deg);}
+    100%{transform: rotate(360deg);}
+}
+@keyframes check{
+    0%{transform: rotate(0deg);}
+    100%{transform: rotate(360deg);}
+}
+
+.item {
+    width: 100%;
+    justify-content: space-between;
+    @include flexCenterY;
+  }
+
 .item-txt{
-    @include spaceOverFlow;
-    flex-grow: 1;
-    width: 200%;
-    &:hover{
-        @include spaceOverFlow;
+    margin-left: 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    p{
+        margin: 0;
+        text-overflow: ellipsis;
+        overflow: hidden;
     }
-}
-.item-name{
-    @include itemName;
-    &:hover{
-        @include spaceOverFlow;
-    }
-}
-.item-desc{
-    @include spaceOverFlow;
-    &:hover{
-        @include spaceOverFlow;
+    .item-title{
+        font-size: 1.1rem;
+        line-height: 1.5;
+        @include bold;
     }
 }
 
 .item-price{
+    padding: 1.5rem .8rem 0 .5rem;
     @include bold;
-    display: flex;
-    align-items: flex-end;
-    margin-right: .5rem;
-    transform: translateX(80%);
-    transition: .5s ease-in-out;
+    transition: .5s ease;
+}
+
+.item-select{
+    position: absolute;
+    background: $color-tertiary;
+    right: 0px;
+    width: 4rem;
+    height: 5rem;
+    color: #fff;
+    @include flexCenterXY;
+    transform: translateX(100%);
+    transition: .5s ease;
 }
 
 .card1{
@@ -438,51 +465,6 @@ restaurants, le bg est plutôt gris*/
 .card10{
     -webkit-animation-delay: map-get($delay-dessert, card10);
             animation-delay: map-get($delay-dessert, card10);
-}
-
-// ANIMATION APPARITION DE LA SELECTION VERTE EN :HOVER
-.item-appear{
-    -webkit-animation: fadein-left .5s linear both;
-    animation: fadein-left .5s linear both;
-    overflow: hidden;
-}
-@-webkit-keyframes fadein-left{
-    0%{opacity: 0;}
-    100%{opacity: 1;}
-}
-@keyframes fadein-left{
-    0%{opacity: 0;}
-    100%{opacity: 1;}
-}
-
-@-webkit-keyframes translate-in{
-    0%{transform: translateX(100%);}
-    100%{transform: translateX(0%);}
-}
-
-@keyframes translate-in{
-    0%{transform: translateX(100%);}
-    100%{transform: translateX(0%);}
-}
-
-.item-select{
-    @include flexCenterXY;
-    background-color: $color-tertiary;
-    width: 8rem;
-    margin: -1rem -1.1rem -1rem -1rem;
-    color: #fff;
-    transform: translateX(100%);
-    transition: all .5s ease-in-out;
-}
-
-@-webkit-keyframes check{
-    0%{transform: rotate(-270deg);}
-    100%{transform: rotate(0%);}
-}
-
-@keyframes check{
-    0%{transform: rotate(-270deg);}
-    100%{transform: rotate(0%);}
 }
 
 // LOADER
