--- a/public/sass/styles.scss
+++ b/public/sass/styles.scss
@@ -316,6 +316,7 @@ footer{
         display: grid;
         grid-gap: 15px;
         margin-top: 2.5rem;
+        grid-auto-rows: max-content;
 }
 }
 
