--- a/styles.css
+++ b/styles.css
@@ -474,6 +474,7 @@ footer a {
   display: grid;
   grid-gap: 15px;
   margin-top: 2.5rem;
+  grid-auto-rows: max-content;
 }
 
 .menu-title h3 {
@@ -503,7 +504,7 @@ footer a {
   overflow: hidden;
   cursor: pointer;
   width: 100%;
-  height: 60px;
+  height: 75px;
   animation: fadein-bottom 1.5s ease-in-out both;
 }
 
